--- a/devel/simplesamlphp-reference-sp-remote.html
+++ b/devel/simplesamlphp-reference-sp-remote.html
@@ -378,16 +378,15 @@
   the actual value used is fetched from metadata by the following
   priority:
  </dd>
- <dd>
-  <ol>
-   <li>
-    SP Remote Metadata
-   </li>
-   <li>
-    IdP Hosted Metadata
-   </li>
-  </ol>
- </dd>
+ <dt>
+  :
+ </dt>
+ <dt>
+  1. SP Remote Metadata
+ </dt>
+ <dt>
+  2. IdP Hosted Metadata
+ </dt>
  <dd>
   <p>
    The default value is:
@@ -545,25 +544,27 @@
  <dd>
   The three most commonly used values are:
  </dd>
- <dd>
-  <ol>
-   <li>
-    <code>
-     urn:oasis:names:tc:SAML:2.0:nameid-format:transient
-    </code>
-   </li>
-   <li>
-    <code>
-     urn:oasis:names:tc:SAML:2.0:nameid-format:persistent
-    </code>
-   </li>
-   <li>
-    <code>
-     urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
-    </code>
-   </li>
-  </ol>
- </dd>
+ <dt>
+  :
+ </dt>
+ <dt>
+  1.
+  <code>
+   urn:oasis:names:tc:SAML:2.0:nameid-format:transient
+  </code>
+ </dt>
+ <dt>
+  2.
+  <code>
+   urn:oasis:names:tc:SAML:2.0:nameid-format:persistent
+  </code>
+ </dt>
+ <dt>
+  3.
+  <code>
+   urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
+  </code>
+ </dt>
  <dd>
   <p>
    The
