--- a/2.0/simplesamlphp-install.html
+++ b/2.0/simplesamlphp-install.html
@@ -297,6 +297,12 @@ repository
     </code>
    </li>
    <li>
+    When running on Linux:
+    <code>
+     posix
+    </code>
+   </li>
+   <li>
     When automatically checking for latest versions, and used by some modules:
     <code>
      cURL
