--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -136,6 +136,28 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Updated German translations (#1814)
  </li>
+ <li>
+  Do not drop UIInfo from SSP array style metadata (#1808)
+ </li>
+ <li>
+  Fixed incorrect return types
+ </li>
+ <li>
+  Fixed code setting a cookie to remember username/organization
+ </li>
+ <li>
+  Added removeEntry-method to MetadataStorageHandlerPdo (#1823)
+ </li>
+</ul>
+<p>
+ <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Updated French translations (#1824)
+ </li>
 </ul>
 <h2 id="version-204">
  Version 2.0.4
