--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -159,6 +159,16 @@ See the upgrade notes for specific information about upgrading.
   Updated French translations (#1824)
  </li>
 </ul>
+<p>
+ <code>
+  metarefresh
+ </code>
+</p>
+<ul>
+ <li>
+  Added support for PDO storage (v0.11.0)
+ </li>
+</ul>
 <h2 id="version-204">
  Version 2.0.4
 </h2>
