deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -148,6 +148,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Added removeEntry-method to MetadataStorageHandlerPdo (#1823)
  </li>
+ <li>
+  Fix SLO with signed response (#1812)
+ </li>
 </ul>
 <p>
  <code>
