--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -148,6 +148,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Added removeEntry-method to MetadataStorageHandlerPdo (#1823)
  </li>
+ <li>
+  Fix SLO with signed response (#1812)
+ </li>
 </ul>
 <p>
  <code>
