deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -149,7 +149,10 @@ See the upgrade notes for specific information about upgrading.
   Added removeEntry-method to MetadataStorageHandlerPdo (#1823)
  </li>
  <li>
-  Fix SLO with signed response (#1812)
+  Fixed SLO with signed response (#1812)
+ </li>
+ <li>
+  Fixed broken MetaDataStorageHandlerSerialize
  </li>
 </ul>
 <p>
