--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -149,7 +149,10 @@ See the upgrade notes for specific information about upgrading.
   Added removeEntry-method to MetadataStorageHandlerPdo (#1823)
  </li>
  <li>
-  Fix SLO with signed response (#1812)
+  Fixed SLO with signed response (#1812)
+ </li>
+ <li>
+  Fixed broken MetaDataStorageHandlerSerialize
  </li>
 </ul>
 <p>
