deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -154,6 +154,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed broken MetaDataStorageHandlerSerialize
  </li>
+ <li>
+  Usernames are now trimmed (#1829)
+ </li>
 </ul>
 <p>
  <code>
