--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -154,6 +154,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed broken MetaDataStorageHandlerSerialize
  </li>
+ <li>
+  Usernames are now trimmed (#1829)
+ </li>
 </ul>
 <p>
  <code>
