deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -134,6 +134,9 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
+  Fixed link pointing to legacy endpoint (#1833)
+ </li>
+ <li>
   Updated German translations (#1814)
  </li>
  <li>
