--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -89,6 +89,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-205">
+      Version 2.0.5
+     </a>
+    </li>
+    <li>
      <a href="#version-204">
       Version 2.0.4
      </a>
@@ -121,6 +126,14 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-205">
+ Version 2.0.5
+</h2>
+<ul>
+ <li>
+  Never expose the cron-API if secret is not properly configured (#1831)
+ </li>
+</ul>
 <h2 id="version-204">
  Version 2.0.4
 </h2>
