--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -134,6 +134,9 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
+  Fixed link pointing to legacy endpoint (#1833)
+ </li>
+ <li>
   Updated German translations (#1814)
  </li>
  <li>
