--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -173,6 +173,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  cron
+ </code>
+</p>
+<ul>
+ <li>
+  Log a warning if secret is not properly configured (#1831)
+ </li>
+</ul>
+<p>
+ <code>
   metarefresh
  </code>
 </p>
