--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -133,6 +133,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Never expose the cron-API if secret is not properly configured (#1831)
  </li>
+ <li>
+  Fixed a bug where IdP-initiated SLO using the HTTP-POST binding wasn't properly dealt with
+ </li>
 </ul>
 <h2 id="version-204">
  Version 2.0.4
