deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -157,6 +157,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Usernames are now trimmed (#1829)
  </li>
+ <li>
+  Never expose the cron-API if secret is not properly configured (#1831)
+ </li>
+ <li>
+  Fixed a bug where IdP-initiated SLO using the HTTP-POST binding wasn't properly dealt with
+ </li>
 </ul>
 <p>
  <code>
