--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -157,6 +157,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Usernames are now trimmed (#1829)
  </li>
+ <li>
+  Never expose the cron-API if secret is not properly configured (#1831)
+ </li>
+ <li>
+  Fixed a bug where IdP-initiated SLO using the HTTP-POST binding wasn't properly dealt with
+ </li>
 </ul>
 <p>
  <code>
