--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -130,7 +130,7 @@ See the upgrade notes for specific information about upgrading.
  Version 2.0.5
 </h2>
 <p>
- Released TBD
+ Released 2023-07-31
 </p>
 <ul>
  <li>
