deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -563,6 +563,16 @@ See the upgrade notes for specific information about upgrading.
   Resolved a possible object injection vulnerability in MDQ metadata cache
  </li>
 </ul>
+<p>
+ <code>
+  metarefresh
+ </code>
+</p>
+<ul>
+ <li>
+  Added support for 'pdo' outputFormat (v0.11)
+ </li>
+</ul>
 <h2 id="version-1198">
  Version 1.19.8
 </h2>
