deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/1.19/multiauth/multiauth.html
+++ b/1.19/multiauth/multiauth.html
@@ -129,8 +129,8 @@ authentication source:
       'multiauth:MultiAuth',
 
       /*
-       * The available authentication sources.
-       * They must be defined in this authsources.php file.
+       <span class="k">*</span> The available authentication sources.
+       <span class="k">*</span> They must be defined in this authsources.php file.
        */
       'sources' =&gt; array(
           'example-saml' =&gt; array(
@@ -266,8 +266,8 @@ don't have redirections during the authentication process.
       'multiauth:MultiAuth',
 
       /*
-       * The available authentication sources.
-       * They must be defined in this authsources.php file.
+       <span class="k">*</span> The available authentication sources.
+       <span class="k">*</span> They must be defined in this authsources.php file.
        */
       'sources' =&gt; array(
           'example-saml' =&gt; array(
