--- a/1.19/simplesamlphp-maintenance.html
+++ b/1.19/simplesamlphp-maintenance.html
@@ -275,7 +275,7 @@ settings by leaving these options unset or setting them to
   ini setting is used. This is 11211 by
   default.
   <div class="codehilite">
-   <pre><span></span><code>The port will be forced to *0* when a UNIX domain socket is specified in *hostname*.
+   <pre><span></span><code>The port will be forced to <span class="gs">*0*</span> when a UNIX domain socket is specified in <span class="gs">*hostname*</span>.
 </code></pre>
   </div>
  </dd>
