--- a/1.19/simplesamlphp-metadata-endpoints.html
+++ b/1.19/simplesamlphp-metadata-endpoints.html
@@ -160,9 +160,9 @@
  The various endpoints can be specified in three different ways:
 </p>
 <div class="codehilite">
- <pre><span></span><code>* A single string.
-* Array of strings.
-* Array of arrays.
+ <pre><span></span><code><span class="k">*</span> A single string.
+<span class="k">*</span> Array of strings.
+<span class="k">*</span> Array of arrays.
 </code></pre>
 </div>
 <h2 id="a-single-string">
