--- a/1.19/simplesamlphp-reference-sp-remote.html
+++ b/1.19/simplesamlphp-reference-sp-remote.html
@@ -718,12 +718,12 @@ and Shibboleth 1.3 protocol:
  <dd>
   Possible values:
   <div class="codehilite">
-   <pre><span></span><code>* `http://www.w3.org/2000/09/xmldsig#rsa-sha1`
-   *Note*: the use of SHA1 is **deprecated** and will be disallowed in the future.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha256`
-  The default.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha384`
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha512`
+   <pre><span></span><code><span class="k">*</span> <span class="sb">`http://www.w3.org/2000/09/xmldsig#rsa-sha1`</span>
+   <span class="gs">*Note*</span>: the use of SHA1 is **deprecated** and will be disallowed in the future.
+<span class="gs">* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha256`</span>
+<span class="gs">  The default.</span>
+<span class="gs">*</span> <span class="sb">`http://www.w3.org/2001/04/xmldsig-more#rsa-sha384`</span>
+<span class="k">*</span> <span class="sb">`http://www.w3.org/2001/04/xmldsig-more#rsa-sha512`</span>
 </code></pre>
   </div>
  </dd>
@@ -992,12 +992,12 @@ of the SP.
  <dd>
   Algorithm which should be used for encryption. Possible values are:
   <div class="codehilite">
-   <pre><span></span><code>* http://www.w3.org/2001/04/xmlenc#aes128-cbc
-* http://www.w3.org/2001/04/xmlenc#aes192-cbc
-* http://www.w3.org/2001/04/xmlenc#aes256-cbc
-* http://www.w3.org/2009/xmlenc11#aes128-gcm
-* http://www.w3.org/2009/xmlenc11#aes192-gcm
-* http://www.w3.org/2009/xmlenc11#aes256-gcm
+   <pre><span></span><code><span class="k">*</span> http://www.w3.org/2001/04/xmlenc#aes128-cbc
+<span class="k">*</span> http://www.w3.org/2001/04/xmlenc#aes192-cbc
+<span class="k">*</span> http://www.w3.org/2001/04/xmlenc#aes256-cbc
+<span class="k">*</span> http://www.w3.org/2009/xmlenc11#aes128-gcm
+<span class="k">*</span> http://www.w3.org/2009/xmlenc11#aes192-gcm
+<span class="k">*</span> http://www.w3.org/2009/xmlenc11#aes256-gcm
 </code></pre>
   </div>
  </dd>
