--- a/1.19/simplesamlphp-upgrade-notes-1.12.html
+++ b/1.19/simplesamlphp-upgrade-notes-1.12.html
@@ -82,7 +82,7 @@
  Upgrade notes for SimpleSAMLphp 1.12
 </h1>
 <div class="codehilite">
- <pre><span></span><code>* PHP version 5.3 is now required.
+ <pre><span></span><code><span class="k">*</span> PHP version 5.3 is now required.
 </code></pre>
 </div>
 </main></body>
