--- a/contrib_modules/consentadmin/consentAdmin.html
+++ b/contrib_modules/consentadmin/consentAdmin.html
@@ -87,7 +87,7 @@ you can not use consentAdmin without the consent module. If you have not
 installed and configured the consent module, please do.
 </p>
 <div class="codehilite">
- <pre><span></span><code>* [How to install and configure the consent module](./consent:consent)
+ <pre><span></span><code><span class="k">*</span> [How to install and configure the consent module](./consent:consent)
 </code></pre>
 </div>
 <p>
