--- a/devel/simplesamlphp-reference-idp-hosted.html
+++ b/devel/simplesamlphp-reference-idp-hosted.html
@@ -272,6 +272,14 @@ entry matches.
 <dl>
  <dt>
   <code>
+   errorURL
+  </code>
+ </dt>
+ <dd>
+  Overrides the errorURL in the IDP's published metadata.
+ </dd>
+ <dt>
+  <code>
    host
   </code>
  </dt>
