--- a/1.19/simplesamlphp-reference-idp-hosted.html
+++ b/1.19/simplesamlphp-reference-idp-hosted.html
@@ -861,12 +861,12 @@ entry matches.
  <dd>
   Possible values:
   <div class="codehilite">
-   <pre><span></span><code>* `http://www.w3.org/2000/09/xmldsig#rsa-sha1`
-   *Note*: the use of SHA1 is **deprecated** and will be disallowed in the future.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha256`
-   The default.
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha384`
-* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha512`
+   <pre><span></span><code><span class="k">*</span> <span class="sb">`http://www.w3.org/2000/09/xmldsig#rsa-sha1`</span>
+   <span class="gs">*Note*</span>: the use of SHA1 is **deprecated** and will be disallowed in the future.
+<span class="gs">* `http://www.w3.org/2001/04/xmldsig-more#rsa-sha256`</span>
+<span class="gs">   The default.</span>
+<span class="gs">*</span> <span class="sb">`http://www.w3.org/2001/04/xmldsig-more#rsa-sha384`</span>
+<span class="k">*</span> <span class="sb">`http://www.w3.org/2001/04/xmldsig-more#rsa-sha512`</span>
 </code></pre>
   </div>
  </dd>
