--- a/devel/core/authproc_cardinalitysingle.html
+++ b/devel/core/authproc_cardinalitysingle.html
@@ -164,12 +164,12 @@ when multi-valued attributes are received where single-valued ones are expected.
       50 =&gt; [
           'class' =&gt; 'core:CardinalitySingle',
           'singleValued' =&gt; [
-              /* from eduPerson (internet2-mace-dir-eduperson-201602) */
-              'eduPersonOrgDN', 'eduPersonPrimaryAffiliation', 'eduPersonPrimaryOrgUnitDN',
-              'eduPersonPrincipalName', 'eduPersonUniqueId',
-              /* from inetOrgPerson (RFC2798), referenced by internet2-mace-dir-eduperson-201602 */
-              'displayName', 'preferredLanguage',
-              /* from SCHAC-IAD Version 1.3.0 */
+              /* from eduPerson (internet2-mace-dir-eduperson-201602) <span class="gs">*/</span>
+<span class="gs">              'eduPersonOrgDN', 'eduPersonPrimaryAffiliation', 'eduPersonPrimaryOrgUnitDN',</span>
+<span class="gs">              'eduPersonPrincipalName', 'eduPersonUniqueId',</span>
+<span class="gs">              /*</span> from inetOrgPerson (RFC2798), referenced by internet2-mace-dir-eduperson-201602 <span class="gs">*/</span>
+<span class="gs">              'displayName', 'preferredLanguage',</span>
+<span class="gs">              /*</span> from SCHAC-IAD Version 1.3.0 */
               'schacMotherTongue', 'schacGender', 'schacDateOfBirth', 'schacPlaceOfBirth',
               'schacPersonalTitle', 'schacHomeOrganization', 'schacHomeOrganizationType',
               'schacExpiryDate',
