--- a/devel/simplesamlphp-modules.html
+++ b/devel/simplesamlphp-modules.html
@@ -435,11 +435,11 @@ this:
 </p>
 <div class="codehilite">
  <pre><span></span><code>  'example-static' =&gt; [
-      /* This maps to modules/exampleauth/src/Auth/Source/Static.php */
-      'exampleauth:StaticSource',
+      /* This maps to modules/exampleauth/src/Auth/Source/Static.php <span class="gs">*/</span>
+<span class="gs">      'exampleauth:StaticSource',</span>
 
-      /* The following is configuration which is passed on to
-       * the exampleauth:StaticSource authentication source. */
+<span class="gs">      /*</span> The following is configuration which is passed on to
+       <span class="k">*</span> the exampleauth:StaticSource authentication source. */
       'uid' =&gt; 'testuser',
       'eduPersonAffiliation' =&gt; ['member', 'employee'],
       'cn' =&gt; ['Test User'],
