--- a/stable/saml/nameid.html
+++ b/stable/saml/nameid.html
@@ -467,29 +467,29 @@ This can be used to set the
  Generating Persistent NameID and eduPersonTargetedID.
 </p>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="s1">'authproc'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[
-<span class="w">      </span><span class="o">//</span><span class="w"> </span><span class="nv">Generate</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">persistent</span><span class="w"> </span><span class="nv">NameID</span>.
-<span class="w">      </span><span class="mi">2</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[
-<span class="w">          </span><span class="s1">'class'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'saml:PersistentNameID'</span>,
-<span class="w">          </span><span class="s1">'identifyingAttribute'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'eduPersonPrincipalName'</span>,
-<span class="w">      </span>],
-<span class="w">      </span><span class="o">//</span><span class="w"> </span><span class="nv">Add</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">persistent</span><span class="w"> </span><span class="nv">to</span><span class="w"> </span><span class="nv">the</span><span class="w"> </span><span class="nv">eduPersonTargetedID</span><span class="w"> </span><span class="nv">attribute</span>
-<span class="w">      </span><span class="mi">60</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[
-<span class="w">          </span><span class="s1">'class'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'saml:PersistentNameID2TargetedID'</span>,
-<span class="w">          </span><span class="s1">'attribute'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'eduPersonTargetedID'</span>,<span class="w"> </span><span class="o">//</span><span class="w"> </span><span class="nv">The</span><span class="w"> </span><span class="nv">default</span>
-<span class="w">          </span><span class="s1">'nameId'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="nv">true</span>,<span class="w"> </span><span class="o">//</span><span class="w"> </span><span class="nv">The</span><span class="w"> </span><span class="nv">default</span>
-<span class="w">      </span>],
-<span class="w">      </span><span class="o">//</span><span class="w"> </span><span class="nv">Use</span><span class="w"> </span><span class="nv">OID</span><span class="w"> </span><span class="nv">attribute</span><span class="w"> </span><span class="nv">names</span>.
-<span class="w">      </span><span class="mi">90</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[
-<span class="w">          </span><span class="s1">'class'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'core:AttributeMap'</span>,
-<span class="w">          </span><span class="s1">'name2oid'</span>,
-<span class="w">      </span>],
-<span class="w">  </span>],
-<span class="w">  </span><span class="o">//</span><span class="w"> </span><span class="nv">The</span><span class="w"> </span><span class="nv">URN</span><span class="w"> </span><span class="nv">attribute</span><span class="w"> </span><span class="nv">NameFormat</span><span class="w"> </span><span class="k">for</span><span class="w"> </span><span class="nv">OID</span><span class="w"> </span><span class="nv">attributes</span>.
-<span class="w">  </span><span class="s1">'attributes.NameFormat'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'urn:oasis:names:tc:SAML:2.0:attrname-format:uri'</span>,
-<span class="w">  </span><span class="s1">'attributeencodings'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span>[
-<span class="w">      </span><span class="s1">'urn:oid:1.3.6.1.4.1.5923.1.1.1.10'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="s1">'raw'</span>,<span class="w"> </span><span class="cm">/* eduPersonTargetedID with oid NameFormat is a raw XML value */</span>
-<span class="w">  </span>],
+ <pre><span></span><code>  'authproc' =&gt; [
+      // Generate the persistent NameID.
+      2 =&gt; [
+          'class' =&gt; 'saml:PersistentNameID',
+          'identifyingAttribute' =&gt; 'eduPersonPrincipalName',
+      ],
+      // Add the persistent to the eduPersonTargetedID attribute
+      60 =&gt; [
+          'class' =&gt; 'saml:PersistentNameID2TargetedID',
+          'attribute' =&gt; 'eduPersonTargetedID', // The default
+          'nameId' =&gt; true, // The default
+      ],
+      // Use OID attribute names.
+      90 =&gt; [
+          'class' =&gt; 'core:AttributeMap',
+          'name2oid',
+      ],
+  ],
+  // The URN attribute NameFormat for OID attributes.
+  'attributes.NameFormat' =&gt; 'urn:oasis:names:tc:SAML:2.0:attrname-format:uri',
+  'attributeencodings' =&gt; [
+      'urn:oid:1.3.6.1.4.1.5923.1.1.1.10' =&gt; 'raw', /* eduPersonTargetedID with oid NameFormat is a raw XML value */
+  ],
 </code></pre>
 </div>
 </main></body>
