--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -89,6 +89,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-206">
+      Version 2.0.6
+     </a>
+    </li>
+    <li>
      <a href="#version-205">
       Version 2.0.5
      </a>
@@ -126,6 +131,20 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-206">
+ Version 2.0.6
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fixed an incorrect return-type in RunnableResponse
+ </li>
+ <li>
+  Fix for admin.protectmetadata=true - it would show a blank page
+ </li>
+</ul>
 <h2 id="version-205">
  Version 2.0.5
 </h2>
