deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/contrib_modules/authorize/authorize.html
+++ b/contrib_modules/authorize/authorize.html
@@ -182,6 +182,27 @@ authorisation issue, specific contact details, etc.
  It should be an array of key/value pairs, with the keys as the language code.
 You can use HTML in the message. See below for an example.
 </p>
+<h3 id="errorurl">
+ <code>
+  errorURL
+ </code>
+</h3>
+<p>
+ If the identity provider includes an
+ <code>
+  errorURL
+ </code>
+ in metadata, this option turns
+on or off the generation of a context-specific errorURL in accordance with the
+REFEDS SAML2 Metadata Deployment Profile for errorURL. Defaults to TRUE.
+</p>
+<p>
+ <strong>
+  Note
+ </strong>
+ : This option needs to be boolean (TRUE/FALSE) else it will be
+          considered an attribute matching rule.
+</p>
 <h2 id="attribute-rules">
  Attribute Rules
 </h2>
