deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -139,6 +139,9 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
+  Fixed a legacy endpoint causing to break iframe-logout (#1846)
+ </li>
+ <li>
   Fixed an incorrect return-type in RunnableResponse
  </li>
  <li>
