--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -139,6 +139,9 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
+  Fixed a legacy endpoint causing to break iframe-logout (#1846)
+ </li>
+ <li>
   Fixed an incorrect return-type in RunnableResponse
  </li>
  <li>
