deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -562,6 +562,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Resolved a possible object injection vulnerability in MDQ metadata cache
  </li>
+ <li>
+  Bumped dependencies
+ </li>
 </ul>
 <p>
  <code>
