--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -147,6 +147,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix for admin.protectmetadata=true - it would show a blank page
  </li>
+ <li>
+  Fix default for entity attributes NameFormat in XML metadata to be 'URI'.
+ </li>
+ <li>
+  Fix error message when invoking SSO endpoint without the required parameters.
+ </li>
 </ul>
 <h2 id="version-205">
  Version 2.0.5
