--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -153,6 +153,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix error message when invoking SSO endpoint without the required parameters.
  </li>
+ <li>
+  Security header regression
+ </li>
 </ul>
 <h2 id="version-205">
  Version 2.0.5
