--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -156,6 +156,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Security header regression
  </li>
+ <li>
+  Fixed a regression that made it impossible to configure metadata-signing on individual hosted IdP's (#1792)
+ </li>
 </ul>
 <h2 id="version-205">
  Version 2.0.5
