--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -135,7 +135,7 @@ See the upgrade notes for specific information about upgrading.
  Version 2.0.6
 </h2>
 <p>
- Released TBD
+ Released 2023-09-07
 </p>
 <ul>
  <li>
