deploy: 4be1e9a201b0817aac43939a664fea0a6529235c

--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -660,7 +660,7 @@
     simplesamlphp-module-oidc
    </dt>
    <dd>
-    A SimpleSAMLphp module adding support for the OpenID Connect protocol
+    A SimpleSAMLphp module for OIDC OP support.
    </dd>
   </dl>
   <ul>
