--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -89,6 +89,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-207">
+      Version 2.0.7
+     </a>
+    </li>
+    <li>
      <a href="#version-206">
       Version 2.0.6
      </a>
@@ -131,6 +136,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-207">
+ Version 2.0.7
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fixed a missing Accept-header for metadata queries (#1865)
+ </li>
+</ul>
 <h2 id="version-206">
  Version 2.0.6
 </h2>
