--- a/devel/simplesamlphp-googleapps.html
+++ b/devel/simplesamlphp-googleapps.html
@@ -445,9 +445,9 @@ An optional company name []:
 <span class="x">    'simplesaml.attributes' =&gt; false,</span>
 <span class="x">    'authproc' =&gt; [</span>
 <span class="x">        1 =&gt; [</span>
-<span class="x">          'saml:AttributeNameID',</span>
+<span class="x">          'class' =&gt; 'saml:AttributeNameID',</span>
 <span class="x">          'identifyingAttribute' =&gt; 'mail',</span>
-<span class="x">          'format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
+<span class="x">          'Format' =&gt; 'urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress',</span>
 <span class="x">        ],</span>
 <span class="x">    ],</span>
 <span class="x">];</span>
