--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -146,6 +146,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a missing Accept-header for metadata queries (#1865)
  </li>
+ <li>
+  Update vulnerable composer (CVE-2023-43655; not affected)
+ </li>
+ <li>
+  Fixed a potential XSS-through-DOM (3x; not affected)
+ </li>
 </ul>
 <h2 id="version-206">
  Version 2.0.6
