--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -152,6 +152,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a potential XSS-through-DOM (3x; not affected)
  </li>
+ <li>
+  Fixed a warning in the RequestedAuthnContextSelector
+ </li>
 </ul>
 <h2 id="version-206">
  Version 2.0.6
