--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -155,6 +155,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a warning in the RequestedAuthnContextSelector
  </li>
+ <li>
+  Fixed file logging handler to not fail on the first write after file-creation (#1877)
+ </li>
 </ul>
 <h2 id="version-206">
  Version 2.0.6
