--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -145,7 +145,7 @@ See the upgrade notes for specific information about upgrading.
  Version 2.0.7
 </h2>
 <p>
- Released TBD
+ Released 2023-10-30
 </p>
 <ul>
  <li>
