deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-208">
+      Version 2.0.8
+     </a>
+    </li>
+    <li>
      <a href="#version-207">
       Version 2.0.7
      </a>
@@ -141,6 +146,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-208">
+ Version 2.0.8
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fix static call for non-static method in bin/initMDSPdo.php (#1892)
+ </li>
+</ul>
 <h2 id="version-207">
  Version 2.0.7
 </h2>
