--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-211">
+      Version 2.1.1
+     </a>
+    </li>
+    <li>
      <a href="#version-210">
       Version 2.1.0
      </a>
@@ -153,6 +158,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-211">
+ Version 2.1.1
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fix static call for non-static method in bin/initMDSPdo.php (#1892)
+ </li>
+</ul>
 <h2 id="version-210">
  Version 2.1.0
 </h2>
