--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -159,6 +159,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Restore logout-behaviour for IdP's that do not send a saml:NameID in their LogoutRequest (#1894)
  </li>
+ <li>
+  Fix code error in docs (#1895)
+ </li>
 </ul>
 <h2 id="version-207">
  Version 2.0.7
