deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -171,6 +171,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Restore logout-behaviour for IdP's that do not send a saml:NameID in their LogoutRequest (#1894)
  </li>
+ <li>
+  Fix code error in docs (#1895)
+ </li>
 </ul>
 <h2 id="version-210">
  Version 2.1.0
