deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/contrib_modules/webauthn/tested_tokens.html
+++ b/contrib_modules/webauthn/tested_tokens.html
@@ -131,6 +131,9 @@
  <li>
   FaceID (tested on an iPhone with iOS 14)
  </li>
+ <li>
+  Android 13 (tested on a Murena Fairphone 5, "Samsung Internet" browser)
+ </li>
 </ul>
 <h2 id="attestation-mode-none">
  Attestation mode None
