--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -163,6 +163,16 @@ See the upgrade notes for specific information about upgrading.
   Fix code error in docs (#1895)
  </li>
 </ul>
+<p>
+ <code>
+  multiauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix TypeError due to missing keys in source array (#1900)
+ </li>
+</ul>
 <h2 id="version-207">
  Version 2.0.7
 </h2>
