--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -175,6 +175,16 @@ See the upgrade notes for specific information about upgrading.
   Fix code error in docs (#1895)
  </li>
 </ul>
+<p>
+ <code>
+  multiauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix TypeError due to missing keys in source array (#1900)
+ </li>
+</ul>
 <h2 id="version-210">
  Version 2.1.0
 </h2>
