deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -162,6 +162,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix code error in docs (#1895)
  </li>
+ <li>
+  Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
+ </li>
 </ul>
 <p>
  <code>
