--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -570,6 +570,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Bumped dependencies
  </li>
+ <li>
+  Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
+ </li>
 </ul>
 <p>
  <code>
