--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -177,6 +177,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
  </li>
+ <li>
+  Fixed the precondition-functionality for more complex authproc-filters (#1905)
+ </li>
 </ul>
 <p>
  <code>
