deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/devel/simplesamlphp-install.html
+++ b/devel/simplesamlphp-install.html
@@ -262,10 +262,6 @@ repository
     </code>
     ,
     <code>
-     intl
-    </code>
-    ,
-    <code>
      json
     </code>
     ,
@@ -309,6 +305,12 @@ repository
     When running on Linux:
     <code>
      posix
+    </code>
+   </li>
+   <li>
+    When wanting to use translations for non-English languages:
+    <code>
+     intl
     </code>
    </li>
    <li>
