--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -183,6 +183,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Reverted a case of 'constructor property promotion' in SAMLParser, causing the validators to be empty (#1904)
  </li>
+ <li>
+  Drop ext-intl in favour of a polyfill (#1908)
+ </li>
 </ul>
 <p>
  <code>
