--- a/devel/simplesamlphp-changelog.html
+++ b/devel/simplesamlphp-changelog.html
@@ -94,8 +94,28 @@
    </a>
    <ul>
     <li>
+     <a href="#version-211">
+      Version 2.1.1
+     </a>
+    </li>
+    <li>
      <a href="#version-210">
       Version 2.1.0
+     </a>
+    </li>
+    <li>
+     <a href="#version-208">
+      Version 2.0.8
+     </a>
+    </li>
+    <li>
+     <a href="#version-207">
+      Version 2.0.7
+     </a>
+    </li>
+    <li>
+     <a href="#version-206">
+      Version 2.0.6
      </a>
     </li>
     <li>
@@ -136,6 +156,45 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-211">
+ Version 2.1.1
+</h2>
+<p>
+ Released 2023-11-28
+</p>
+<ul>
+ <li>
+  Fix static call for non-static method in bin/initMDSPdo.php (#1892)
+ </li>
+ <li>
+  Restore logout-behaviour for IdP's that do not send a saml:NameID in their LogoutRequest (#1894)
+ </li>
+ <li>
+  Fix code error in docs (#1895)
+ </li>
+ <li>
+  Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
+ </li>
+ <li>
+  Fixed the precondition-functionality for more complex authproc-filters (#1905)
+ </li>
+ <li>
+  Reverted a case of 'constructor property promotion' in SAMLParser, causing the validators to be empty (#1904)
+ </li>
+ <li>
+  Drop ext-intl in favour of a polyfill (#1908)
+ </li>
+</ul>
+<p>
+ <code>
+  multiauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix TypeError due to missing keys in source array (#1900)
+ </li>
+</ul>
 <h2 id="version-210">
  Version 2.1.0
 </h2>
@@ -168,6 +227,91 @@ See the upgrade notes for specific information about upgrading.
    composer/composer
   </code>
   was dropped in favour of a packaged phar-file.
+ </li>
+</ul>
+<h2 id="version-208">
+ Version 2.0.8
+</h2>
+<p>
+ Released 2023-11-28
+</p>
+<ul>
+ <li>
+  Fix static call for non-static method in bin/initMDSPdo.php (#1892)
+ </li>
+ <li>
+  Restore logout-behaviour for IdP's that do not send a saml:NameID in their LogoutRequest (#1894)
+ </li>
+ <li>
+  Fix code error in docs (#1895)
+ </li>
+ <li>
+  Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
+ </li>
+ <li>
+  Drop ext-intl in favour of a polyfill (#1908)
+ </li>
+</ul>
+<p>
+ <code>
+  multiauth
+ </code>
+</p>
+<ul>
+ <li>
+  Fix TypeError due to missing keys in source array (#1900)
+ </li>
+</ul>
+<h2 id="version-207">
+ Version 2.0.7
+</h2>
+<p>
+ Released 2023-10-30
+</p>
+<ul>
+ <li>
+  Fixed a missing Accept-header for metadata queries (#1865)
+ </li>
+ <li>
+  Update vulnerable composer (CVE-2023-43655; not affected)
+ </li>
+ <li>
+  Fixed a potential XSS-through-DOM (3x; not affected)
+ </li>
+ <li>
+  Fixed a warning in the RequestedAuthnContextSelector
+ </li>
+ <li>
+  Fixed file logging handler to not fail on the first write after file-creation (#1877)
+ </li>
+</ul>
+<h2 id="version-206">
+ Version 2.0.6
+</h2>
+<p>
+ Released 2023-09-07
+</p>
+<ul>
+ <li>
+  Fixed a legacy endpoint causing to break iframe-logout (#1846)
+ </li>
+ <li>
+  Fixed an incorrect return-type in RunnableResponse
+ </li>
+ <li>
+  Fix for admin.protectmetadata=true - it would show a blank page
+ </li>
+ <li>
+  Fix default for entity attributes NameFormat in XML metadata to be 'URI'.
+ </li>
+ <li>
+  Fix error message when invoking SSO endpoint without the required parameters.
+ </li>
+ <li>
+  Security header regression
+ </li>
+ <li>
+  Fixed a regression that made it impossible to configure metadata-signing on individual hosted IdP's (#1792)
  </li>
 </ul>
 <h2 id="version-205">
