--- a/devel/simplesamlphp-upgrade-notes-2.2.html
+++ b/devel/simplesamlphp-upgrade-notes-2.2.html
@@ -83,52 +83,54 @@
  <div id="content">
  </div>
 </header>
-<main><h1 id="upgrade-notes-for-simplesamlphp-21">
- Upgrade notes for SimpleSAMLphp 2.1
+<main><h1 id="upgrade-notes-for-simplesamlphp-22">
+ Upgrade notes for SimpleSAMLphp 2.2
 </h1>
 <p>
- SimpleSAMLphp 2.1 is a minor new release which bumps some
-of the minimum requirements to be able to run SimpleSAMLphp.
+ SimpleSAMLphp 2.2 is a minor new release which introduces a few new features.
 The following changes are relevant for installers and/or developers.
 </p>
-<h2 id="software-requirements">
- Software requirements
+<h2 id="deprecations">
+ Deprecations
 </h2>
+<p>
+ The following methods were marked
+ <code>
+  deprecated
+ </code>
+ and will be removed in a next major release.
+</p>
 <ul>
  <li>
-  The minimum PHP version required is now PHP 8.0.
+  SimpleSAML\Error\ErrorCodes::defaultGetAllErrorCodeTitles - Use getDefaultTitles instead
  </li>
  <li>
-  Dropped support for Symfony 5.4.
+  SimpleSAML\Error\Errorcodes::getCustomErrorCodeTitles - Use getCustomTitles instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getAllErrorCodeTitles - Use getAllTitles instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::defaultGetAllErrorCodeDescriptions - Use getDefaultDescriptions instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getCustomErrorCodeDescriptions - Use getCustomErrorCodeDescriptions instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getAllErrorCodeDescriptions - Use getAllDescriptions instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getAllErrorCodeMessages - Use getAllMessages instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getErrorCodeTitle - Use getTitle instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getErrorCodeDescription - Use getDescription instead
+ </li>
+ <li>
+  SimpleSAML\Error\Errorcodes::getErrorCodeMessage - Use getMessage instead
  </li>
 </ul>
-<h2 id="two-builds">
- Two builds
-</h2>
-<p>
- As of SimpleSAMLphp 2.1 two builds are created for every release.
-The 'slim' build is a lightweight build without any modules other than the core modules installed (alike the 2.0 build).
-A new 'full' build is added that will come with the most used modules pre-installed.
-</p>
-<h2 id="default-security-headers">
- Default security-headers
-</h2>
-<p>
- The default security headers have been adjusted to a more strict set. This may cause issues if you use any modules
-or custom themes that use inline CSS or JavaScript. You can adjust these settings in
- <code>
-  config.php
- </code>
- using the
- <code>
-  headers.security
- </code>
- setting, but we recommend updating the custom module/theme and move and inline CSS or JavaScript
-to a file. All modules within the
- <code>
-  simplesamlphp/*
- </code>
- namespace are fixed and should not cause any issues.
-</p>
 </main></body>
 </html>
