--- a/stable/simplesamlphp-upgrade-notes-2.1.html
+++ b/stable/simplesamlphp-upgrade-notes-2.1.html
@@ -110,5 +110,25 @@ The following changes are relevant for installers and/or developers.
 The 'slim' build is a lightweight build without any modules other than the core modules installed (alike the 2.0 build).
 A new 'full' build is added that will come with the most used modules pre-installed.
 </p>
+<h2 id="default-security-headers">
+ Default security-headers
+</h2>
+<p>
+ The default security headers have been adjusted to a more strict set. This may cause issues if you use any modules
+or custom themes that use inline CSS or JavaScript. You can adjust these settings in
+ <code>
+  config.php
+ </code>
+ using the
+ <code>
+  headers.security
+ </code>
+ setting, but we recommend updating the custom module/theme and move and inline CSS or JavaScript
+to a file. All modules within the
+ <code>
+  simplesamlphp/*
+ </code>
+ namespace are fixed and should not cause any issues.
+</p>
 </main></body>
 </html>
