deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -174,6 +174,16 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  ldap
+ </code>
+</p>
+<ul>
+ <li>
+  Restored 1.x functionality to be able to fetch operational attributes
+ </li>
+</ul>
 <h2 id="version-211">
  Version 2.1.1
 </h2>
