deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -157,6 +157,21 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Restore posibility to use HTTP-Artifact on AuthnRequests (regression from 2.0.4)
+ </li>
+</ul>
+<p>
+ <code>
+  core
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed a broken template for the WarnShortSSOInterval authproc-filter (#1920)
+ </li>
+</ul>
 <h2 id="version-208">
  Version 2.0.8
 </h2>
