--- a/1.19/simplesamlphp-changelog.html
+++ b/1.19/simplesamlphp-changelog.html
@@ -576,6 +576,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  core
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed a broken template for the WarnShortSSOInterval authproc-filter (#1920)
+ </li>
+</ul>
+<p>
+ <code>
   metarefresh
  </code>
 </p>
