--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -174,6 +174,14 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Restore posibility to use HTTP-Artifact on AuthnRequests (regression from 2.0.4)
+ </li>
+ <li>
+  Fixed undefined variable exception when using MS SQL store (#1917 + #1918)
+ </li>
+</ul>
 <p>
  <code>
   ldap
@@ -181,7 +189,10 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
-  Restored 1.x functionality to be able to fetch operational attributes
+  Restored 1.x functionality to be able to fetch operational attributes (v2.3.0)
+ </li>
+ <li>
+  Fixed undesirable side-effect introduced in v2.3.0 (v2.3.1)
  </li>
 </ul>
 <h2 id="version-211">
