deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -184,6 +184,16 @@ See the upgrade notes for specific information about upgrading.
 </ul>
 <p>
  <code>
+  core
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed a broken template for the WarnShortSSOInterval authproc-filter (#1920)
+ </li>
+</ul>
+<p>
+ <code>
   ldap
  </code>
 </p>
