deploy: e3dcfb2b51e5c8e4c312bcb5ea540429120da9b5

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -161,6 +161,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Restore posibility to use HTTP-Artifact on AuthnRequests (regression from 2.0.4)
  </li>
+ <li>
+  Fix legacy endpoints to not send response twice
+ </li>
 </ul>
 <p>
  <code>
