--- a/2.1/simplesamlphp-reference-idp-hosted.html
+++ b/2.1/simplesamlphp-reference-idp-hosted.html
@@ -878,7 +878,7 @@ entry matches.
   Override the default URL for the SingleSignOnService for this
   IdP. This is an absolute URL. The default value is
   <code>
-   &lt;SimpleSAMLphp-root&gt;/saml2/idp/SSOService.php
+   &lt;SimpleSAMLphp-root&gt;/module.php/saml/idp/singleSignOnService
   </code>
  </dd>
  <dd>
@@ -926,7 +926,7 @@ entry matches.
   Override the default URL for the SingleLogoutService for this
   IdP. This is an absolute URL. The default value is
   <code>
-   &lt;SimpleSAMLphp-root&gt;/saml2/idp/SingleLogoutService.php
+   &lt;SimpleSAMLphp-root&gt;/module.php/saml/idp/singleLogout
   </code>
  </dd>
  <dd>
