--- a/2.1/simplesamlphp-errorhandling.html
+++ b/2.1/simplesamlphp-errorhandling.html
@@ -378,11 +378,7 @@ This is handled by the
   \SimpleSAML\Module\saml\Error
  </code>
  .
-The assertion consumer script of the SAML 2 authentication source (
- <code>
-  modules/saml2/sp/acs.php
- </code>
- ) uses this method.
+The assertion consumer service of the SAML 2 authentication source uses this method.
 The result is that generic exceptions are thrown from that authentication source.
 </p>
 <p>
