--- a/devel/simplesamlphp-ecp-idp.html
+++ b/devel/simplesamlphp-ecp-idp.html
@@ -165,11 +165,11 @@ The
  <pre><span></span><code><span class="x">'SingleSignOnService' =&gt; [</span>
 <span class="x">    0 =&gt; [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
-<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">    ],</span>
 <span class="x">    1 =&gt; [</span>
 <span class="x">        'index' =&gt; 0,</span>
-<span class="x">        'Location' =&gt; 'https://didp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://didp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:SOAP',</span>
 <span class="x">    ],</span>
 <span class="x">],</span>
