--- a/devel/simplesamlphp-hok-idp.html
+++ b/devel/simplesamlphp-hok-idp.html
@@ -166,7 +166,7 @@ The
 <span class="x">    [</span>
 <span class="x">        'hoksso:ProtocolBinding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
-<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">        'attributes' =&gt; [</span>
 <span class="x">            [</span>
 <span class="x">                'namespaceURI' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
@@ -178,7 +178,7 @@ The
 <span class="x">    ],</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
-<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">    ],</span>
 <span class="x">],</span>
 </code></pre>
