--- a/stable/simplesamlphp-hok-idp.html
+++ b/stable/simplesamlphp-hok-idp.html
@@ -166,11 +166,11 @@ The
 <span class="x">    [</span>
 <span class="x">        'hoksso:ProtocolBinding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:profiles:holder-of-key:SSO:browser',</span>
-<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">    ],</span>
 <span class="x">    [</span>
 <span class="x">        'Binding' =&gt; 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect',</span>
-<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/saml2/idp/SSOService.php',</span>
+<span class="x">        'Location' =&gt; 'https://idp.example.org/simplesaml/module.php/saml/idp/singleSignOnService',</span>
 <span class="x">    ],</span>
 <span class="x">],</span>
 </code></pre>
