--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -211,6 +211,16 @@ See the upgrade notes for specific information about upgrading.
   Fixed undesirable side-effect introduced in v2.3.0 (v2.3.1)
  </li>
 </ul>
+<p>
+ <code>
+  saml
+ </code>
+</p>
+<ul>
+ <li>
+  Disable caching for metadata-endpoint when protect.metadata is true (#1926)
+ </li>
+</ul>
 <h2 id="version-211">
  Version 2.1.1
 </h2>
