deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -164,6 +164,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix legacy endpoints to not send response twice
  </li>
+ <li>
+  Fix exception when using iframe-logout (#1936)
+ </li>
 </ul>
 <p>
  <code>
