deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -167,6 +167,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix exception when using iframe-logout (#1936)
  </li>
+ <li>
+  Look for the schema files in the right place (#1929)
+ </li>
 </ul>
 <p>
  <code>
