deploy: cc480421d24cacccac8e6878af3251a5fb121362

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -190,6 +190,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Look for the schema files in the right place (#1929)
  </li>
+ <li>
+  Fixed file logging handler to not fail on the first write after file-creation (#1877)
+ </li>
+ <li>
+  Fixed a warning in the RequestedAuthnContextSelector
+ </li>
 </ul>
 <p>
  <code>
@@ -379,9 +385,6 @@ See the upgrade notes for specific information about upgrading.
  </li>
  <li>
   Fixed a warning in the RequestedAuthnContextSelector
- </li>
- <li>
-  Fixed file logging handler to not fail on the first write after file-creation (#1877)
  </li>
 </ul>
 <h2 id="version-206">
